DuPont DevSB/src/objects/agf__ADM_Acceptance_Criterion__c.object
<CustomObject>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description (2000)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Acceptance Criteria</relationshipLabel>
        <relationshipName>Acceptance_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Acceptance Criterion</label>
    <listViews>
        <fullName>Project_Victory_Acceptance</fullName>
        <columns>NAME</columns>
        <columns>agf__Work__c</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Work__c</field>
            <operation>greaterThan</operation>
            <value>W-002350</value>
        </filters>
        <label>Project Victory Acceptance</label>
    </listViews>
    <nameField>
        <label>Acceptance Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acceptance Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__Description_is_not_null</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( agf__Description__c )</errorConditionFormula>
        <errorMessage>Description cannot be blank!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Name_is_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>Name cannot be blank!</errorMessage>
    </validationRules>
</CustomObject>